# fastapi_alembic_skeleton

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  main.py  pyproject.toml  run_cheks.sh  setup.cfg  sonar-project.properties
alembic/: env.py  script.py.mako
alembic/versions/: 284d6f0d6f25_init.py  86e8ca550d04_cars.py
database/: db.py  models.py
env/: local.env  pytest.env
fastapi_alembic_skeleton/: README.md
tests/: conftest.py
tests/migrations/: conftest.py  test_data_migrations.py  test_migrations_up_to_date.py  test_stairway.py
tests/migrations/data_migrations/: migration_86e8ca550d04_cars.py
utils/: __init__.py  utils.py
